--- a/Lab Task-1[Portfolio Design]/webapp/Views/Portfolio/Projects.cshtml
+++ b/Lab Task-1[Portfolio Design]/webapp/Views/Portfolio/Projects.cshtml
@@ -3,5 +3,35 @@
     ViewBag.Title = "Projects";
 }
 
-<h2>Projects</h2>
+<h2 align="center"><u>Projects</u></h2>
+<div>
+    <h3>&nbsp; 1.Crowdfunding using PHP</h3><br>
+    <p>
+        &nbsp; &nbsp; &nbsp; Proposed project of crowdfunding to provide solutions for who are trying to help the people and people who
+        are needed help. Basically, we are trying to develop a web app where wealthy people who are interested in
+        donating can send money to miserable life leading people or any social causes. The project consists of four
+        different users. They are 1. Admin 2. Employee 3. Applicant 4. Donor. Here Admin is the head of Funding.<br>
+        <a href="https://github.com/itsjahidhasan/Crowdfunding-Web_Tec_Project" class="btn-block" target="_blank">&nbsp;&nbsp;<br>Git Link</a>
+        <br>
+    </p>
+</div>
+<div>
+    <h3>&nbsp; 2.TeamCovid-19 using C#</h3><br>
+    <p>
+        &nbsp; &nbsp; &nbsp; This a windows from project using C# language. The features of this project are : patient can chat with the doctor with this application
+        ,Doctor can prescribe medicines for patient,people check there covid health simle answering some question and the application will tell the user if he or she 
+        has to do covid test,any one can order medicines,can check updated numbers of covid patents.<br>
+        <a href="https://github.com/itsjahidhasan/TeamCovid-19_csharpWindowsFormApplication" class="btn-block" target="_blank">&nbsp;&nbsp;<br>Git Link</a>
+        <br>
+    </p>
+</div>
+<div>
+    <h3>&nbsp; 3.Calculator using C#</h3><br>
+    <p>
+        &nbsp; &nbsp; &nbsp; This a windows from project using C# language.It's a simple calculator which can can do addition, subtraction, multiplication, and division.<br>
+        <a href="https://github.com/itsjahidhasan/Calculator_CSherp-WindowsFormApplication" class="btn-block" target="_blank">&nbsp;&nbsp;<br>Git Link</a>
+        <br>
+    </p>
+</div>
+
 
