--- a/Lab Task-1[Portfolio Design]/webapp/Views/Portfolio/References.cshtml
+++ b/Lab Task-1[Portfolio Design]/webapp/Views/Portfolio/References.cshtml
@@ -4,4 +4,37 @@
 }
 
 <h2>References</h2>
+<table class="table table-striped">
+    <tbody>
+        <tr>
+            <th></th>
+            <th>&nbsp;&nbsp;&nbsp;&nbsp;Reference:01</th>
+        </tr>
+        <tr>
+            <th scope="row">Name</th>
+            <td>:&nbsp;&nbsp;TANVIR AHMED</td>
+        </tr>
+        <tr>
+            <th scope="row">Organization</th>
+            <td>:&nbsp;&nbsp;American International University-Bangladesh (AIUB)</td>
+        </tr>
+        <tr>
+            <th scope="row">Designation</th>
+            <td>:&nbsp;&nbsp;LECTURER</td>
+        </tr>
+        <tr>
+            <th scope="row">Mobile</th>
+            <td>:&nbsp;&nbsp;</td>
+        </tr>
+        <tr>
+            <th scope="row">E-Mail</th>
+            <td>:&nbsp;&nbsp;tanvir.ahmed@aiub.edu</td>
+        </tr>
+        <tr>
+            <th scope="row">Relation</th>
+            <td>:&nbsp;&nbsp;Academic</td>
+        </tr>
+
+
+</table>
 
