--- a/Lab Task-1[Portfolio Design]/webapp/Views/Portfolio/PersonalInfo.cshtml
+++ b/Lab Task-1[Portfolio Design]/webapp/Views/Portfolio/PersonalInfo.cshtml
@@ -1,49 +1,49 @@
 ﻿
 @{
-    ViewBag.Title = "PersonalInfo";
+    ViewBag.Title = "Personal Information";
 }
 
 <h2 align="center">Personal Information</h2>
 <table class="table table-striped">
     <tbody>
         <tr>
-            <th scope="row">Father's Name :</th>
-            <td>Md. Jamat Ali </td>
+            <th scope="row">Father's Name</th>
+            <td>:&nbsp;&nbsp;Md. Jamat Ali </td>
         </tr>
         <tr>
-            <th scope="row">Mother's Name :</th>
-            <td>Rahana Ali</td>
+            <th scope="row">Mother's Name </th>
+            <td>:&nbsp;&nbsp;Rahana Ali</td>
         </tr>
         <tr>
-            <th scope="row">Date of Birth :</th>
-            <td>23 September, 1998</td>
+            <th scope="row">Date of Birth </th>
+            <td>:&nbsp;&nbsp;23 September, 1998</td>
         </tr>
         <tr>
-            <th scope="row">Gender        :</th>
-            <td>Male</td>
+            <th scope="row">Gender</th>
+            <td>:&nbsp;&nbsp;Male</td>
         </tr>
         <tr>
-            <th scope="row">Height:</th>
-            <td>5’.6”</td>
+            <th scope="row">Height</th>
+            <td>:&nbsp;&nbsp;5’.6”</td>
         </tr>
         <tr>
-            <th scope="row">Blood Group:</th>
-            <td>B(+ve)</td>
+            <th scope="row">Blood Group</th>
+            <td>:&nbsp;&nbsp;B(+ve)</td>
         </tr>
         <tr>
-            <th scope="row">Marital Status:</th>
-            <td>Single</td>
+            <th scope="row">Marital Status</th>
+            <td>:&nbsp;&nbsp;Single</td>
         </tr>
         <tr>
-            <th scope="row">Nationality:</th>
-            <td>Bangladeshi </td>
+            <th scope="row">Nationality</th>
+            <td>:&nbsp;&nbsp;Bangladeshi </td>
         </tr>
         <tr>
-            <th scope="row">Religion:</th>
-            <td>Islam</td>
+            <th scope="row">Religion</th>
+            <td>:&nbsp;&nbsp;Islam</td>
         </tr>
         <tr>
-            <th scope="row">Permanent Address:</th>
-            <td>Vill: Polashbari, P/O: Savar Cantonment, P/S: Ashulia, Dist: Dhaka</td>
+            <th scope="row">Permanent Address</th>
+            <td>:&nbsp;&nbsp;Vill: Polashbari, P/O: Savar Cantonment, P/S: Ashulia, Dist: Dhaka</td>
         </tr>
 </table>
