--- a/Labtask-2[Database,data manupulation]/ManagmentApp/ManagmentApp/Views/Products/Index.cshtml
+++ b/Labtask-2[Database,data manupulation]/ManagmentApp/ManagmentApp/Views/Products/Index.cshtml
@@ -21,7 +21,7 @@
             <td>@p.Price</td>
             <td>@p.Quantity</td>
             <td>@p.Description</td>
-            <td><a href="/Products/GetUpdateProduct/@p.Id" class="btn btn-primary">Update</a></td>
+            <td><a href="/Products/GetUpdateProduct?id=@p.Id" class="btn btn-primary">Update</a></td>
             <td><a href="/Products/Delete/@p.Id" class="btn btn-danger">Delete</a></td>
             <td><a href="/Products/AddToCart/@p.Id" class="btn btn-success">Add to Cart</a></td>
 
